objects/Product_Class__c.object
<CustomObject>
    <description>This is the replacement for the Product Class Object that exists inside of Siebel today.</description>
    <fields>
        <fullName>AP_Chatter_Escalation__c</fullName>
        <label>AP Chatter Escalation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Category__c</fullName>
        <formula>TEXT(Product_Attribute__r.BU_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Summary__c</fullName>
        <formula>Product_Attribute__r.BU_Summary__c</formula>
        <label>BU Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Product_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This product class is visible to COS if this flag is True.</description>
        <inlineHelpText>This product class is visible to COS if this flag is True.</inlineHelpText>
        <label>COS Product Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <formula>IF(Name=&apos;Stratus HLS&apos;,&apos;Digital IC Design&apos;, 
IF(Name=&apos;Design IP&apos;,&apos;Design IP&apos;, 
IF(Name=&apos;Verification IP&apos;,&apos;Verification IP&apos;, 
IF(Name=&apos;Memory Model&apos;,&apos;Verification IP&apos;,
IF(Name=&apos;VIP Catalog&apos;,&apos;Verification IP&apos;,
IF(Name=&apos;Accelerated Verification IP&apos;,&apos;Functional Verification&apos;,  
IF(Name=&apos;Tensilica IP&apos;,&apos;Tensilica IP&apos;,Product_Attribute__r.Cadence_Platform__r.Name 
)
)
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cadence Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Technology</label>
        <referenceTo>Design_Technology__c</referenceTo>
        <relationshipLabel>Product Classes</relationshipLabel>
        <relationshipName>Product_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMEA_Chatter_Escalation__c</fullName>
        <label>EMEA Chatter Escalation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Release_Date__c</fullName>
        <label>End Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Sale_Date__c</fullName>
        <label>End of Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Support_Date__c</fullName>
        <label>End of Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_Chatter_Group__c</fullName>
        <label>Expert Chatter Group</label>
        <picklist>
            <picklistValues>
                <fullName>Ask Allegro ADW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro DECIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro DEHDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro FPGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro PCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro Pspice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Allegro SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Altos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask CAS Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask CAS Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask CAS Schematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask CAS Simulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask CAS Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Chip Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Conformal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask COS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask EdaOnTap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask ESL Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Emulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Fire Ice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask HDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask ICD Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask ICD Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Incisiv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Incisiv Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Installation and Licensing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expertise_Level__c</fullName>
        <label>Expertise Level</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Family__c</fullName>
        <formula>Product_Attribute__r.External_Family_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Customer_Ship_Date__c</fullName>
        <label>First Customer Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Product_Identifier__c</fullName>
        <label>Global Product Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>India_Chatter_Escalation__c</fullName>
        <label>India Chatter Escalation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInitiative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if product is an initiative product</description>
        <label>Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Chatter_Escalation__c</fullName>
        <label>Japan Chatter Escalation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_Team__c</fullName>
        <label>K Team</label>
        <picklist>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NA_Chatter_Escalation__c</fullName>
        <label>NA Chatter Escalation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewProdNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is created to determine if the new product available for Cos Search notification has been sent out for this product class.</description>
        <label>New Product Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Internal_Product_Display_Name__c</fullName>
        <label>Parent Internal Product Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Internal_Product_Name__c</fullName>
        <label>Parent Internal Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Internal_Product_Part__c</fullName>
        <label>Parent Internal Product Part #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Name__c</fullName>
        <label>Price Book Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Product Classes</relationshipLabel>
        <relationshipName>Product_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Class_Number__c</fullName>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Product Class Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Release_Status__c</fullName>
        <label>Product Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Capture produt type, e.g. H-&gt;Hardward, S-&gt;Software, D-&gt;DIP, T-&gt;TIP, V-&gt;VIP</description>
        <label>Product Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Product_Class_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active_Flag__c</columns>
        <columns>COS_Product_Visibility__c</columns>
        <columns>NAME</columns>
        <columns>External_Family__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>isMigrated_Record__c</columns>
        <columns>K_Team__c</columns>
        <columns>Status__c</columns>
        <columns>Row_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Migrated</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>isMigrated_Record__c</columns>
        <columns>Active_Flag__c</columns>
        <columns>Status__c</columns>
        <columns>Row_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isMigrated_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Migrated</label>
    </listViews>
    <nameField>
        <label>Product Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_AP_Chatter_Escalation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK(  AP_Chatter_Escalation__c  ))</errorConditionFormula>
        <errorDisplayField>AP_Chatter_Escalation__c</errorDisplayField>
        <errorMessage>AP Chatter Escalation Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_EMEA_Chatter_Escalation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK( EMEA_Chatter_Escalation__c ))</errorConditionFormula>
        <errorDisplayField>EMEA_Chatter_Escalation__c</errorDisplayField>
        <errorMessage>EMEA Chatter Escalation Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Expert_Chatter_Group</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK(TEXT(Expert_Chatter_Group__c)))</errorConditionFormula>
        <errorDisplayField>Expert_Chatter_Group__c</errorDisplayField>
        <errorMessage>Expert Chatter Group Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Japan_Chatter_Escalation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK(  Japan_Chatter_Escalation__c  ))</errorConditionFormula>
        <errorDisplayField>Japan_Chatter_Escalation__c</errorDisplayField>
        <errorMessage>Japan Chatter Escalation Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_NA_Chatter_Escalation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK( NA_Chatter_Escalation__c ))</errorConditionFormula>
        <errorDisplayField>NA_Chatter_Escalation__c</errorDisplayField>
        <errorMessage>NA Chatter Escalation Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_SPB_India_Escalation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.LastName != &apos;Migration&apos;, ISBLANK(   India_Chatter_Escalation__c   ))</errorConditionFormula>
        <errorDisplayField>India_Chatter_Escalation__c</errorDisplayField>
        <errorMessage>India Chatter Escalation Required</errorMessage>
    </validationRules>
</CustomObject>